Add fee assignment CRUD endpoints
